--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
-    "express": "^4.16.3",
     "cors": "^2.8.4",
-    "request": "^2.85.0",
-    "redis": "^2.8.0"
+    "express": "^4.16.3",
+    "redis": "^2.8.0",
+    "request": "^2.85.0"
   }
 }
